--- a/register.html
+++ b/register.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Twitter Like - Inscription</title>
+	<title>Lambda - Inscription</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="img/lambda.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div class="header">
-		<h1 onclick="myFunc()">Twitter Like</h1>
-		<a href="login.html">Se connecter</a>
+		<h1 onclick="myFunc()">Lambda</h1>
+		<div class="onglet">
+			<a href="login.html">Se connecter</a>
+		</div>
 	</div>
 	<div class="content">
 		<div class="form">
@@ -27,6 +30,9 @@
 			<p>Déjà inscrit ? <a href="login.html">Se connecter</a></p>
 		</div>
 	</div>
+	<footer>
+        <p>© 2023 Cod-Cre and Co</p>
+    </footer>
 	<script src="script.js"></script>
 </body>
 </html>
