--- a/login.html
+++ b/login.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-	<title>Twitter Like - Connexion</title>
+	<title>Lambda - Connexion</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="img/lambda.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div class="header">
-		<h1 onclick="myFunc()">Twitter Like</h1>
-		<a href="register.html">S'inscrire</a>
+		<h1 onclick="myFunc()">Lambda</h1>
+		<div class="onglet">
+			<a href="register.html">S'inscrire</a>
+		</div>
 	</div>
 	<div class="content">
 		<div class="form">
@@ -23,6 +26,9 @@
 			<p>Pas encore de compte ? <a href="register.html">S'inscrire</a></p>
 		</div>
 	</div>
+	<footer>
+        <p>© 2023 Cod-Cre and Co</p>
+    </footer>
 	<script src="script.js"></script>
 </body>
 </html>
