edit css by adding lambda img

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="header">
-		<h1 onclick="myFunc()">Lambda</h1>
+		<img src="img/lambda.png" alt="Lambda" onclick="myFunc()">
 		<div class="onglet">
 			<a href="register.html">S'inscrire</a>
 		</div>
