--- a/login.html
+++ b/login.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="utf-8" />
 	<title>Lambda - Connexion</title>
+	<link rel="shortcut icon" href="media/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" href="img/lambda.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div class="header">
-		<img src="img/lambda.png" alt="Lambda" onclick="myFunc()">
-		<div class="onglet">
-			<a href="register.html">S'inscrire</a>
-		</div>
+		<h1 onclick="myFunc()">Lambda</h1>
+		<a href="register.html">S'inscrire</a>
 	</div>
 	<div class="content">
 		<div class="form">
@@ -26,9 +24,7 @@
 			<p>Pas encore de compte ? <a href="register.html">S'inscrire</a></p>
 		</div>
 	</div>
-	<footer>
-        <p>© 2023 Cod-Cre and Co</p>
-    </footer>
 	<script src="script.js"></script>
 </body>
 </html>
+	
