--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Lambda</title>
-	<link rel="shortcut icon" href="media/favicon.png"/>
+	<link rel="shortcut icon" href="img/lambda.ico"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
